--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
-    <string name="app_name">TheHFS</string>
+    <string name="app_name">The HFS</string>
     <string name="action_settings">Settings</string>
+    <string name="signin_prompt">Already have an account? <u>Sign in</u></string>
+    <string name="signup_prompt">Don\'t have an account? <u>Sign up</u></string>
 </resources>
